# rag-app

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: case1.txt  case2.txt  demo.txt  law.txt  test.txt
docs/lawcases/: metadata.json  张扣扣.txt  快播.txt  杭州保姆.txt  郭美美.txt
models/: api.py  models.py
server/: main.py
services/: asr.py  const.py  embedding.py  file.py  rag.py  retriever.py
