[tool.poetry]
name = "rag-app"
version = "0.1.0"
description = "llm-based rag application"
authors = ["yuf"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.8.17"
langchain = "^0.0.319"
fastapi = "^0.104.0"
openai = "^0.28.1"
uvicorn = "^0.23.2"
chromadb = "^0.4.14"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
pysqlite3 = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "main:start"
